k8s/00-namespace-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: toron-system
  labels:
    app.kubernetes.io/name: toron
    app.kubernetes.io/part-of: toron-ingress
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: toron
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: toron.io/ingress-controller
